--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" id="name" placeholder="Name" required>
+		
+		<label for="email">email*</label>
+		<input type="email" placeholder="Email" id="email" required>
+		
+		<label for="gender"  required>Gender*</label>
+		<input type="radio"  id="gender_m" name="gender"  required>
+		<label for="gender_m">Male</label>
+		<input type="radio"  id="gender_f" name="gender"  required>
+		<label for="gender_f">Female</label>
+		
+		<label for="cars">Car Brands*</label>
+		<select  id="cars" required>
+			<option  value="" disabled selected>--Please choose an option--</option>
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedez">Mercedez</option>
+		</select>
+		
+		<label for="age">Age*</label>
+		<input type="number" id="age" placeholder="Age" required>
+		
+		<label for="dob">DOB*</label>
+		<input type="date"  id="dob" required>
+		
+		<label for="tel">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" >
+		<label for="password">Password*</label>
+        <input type="password" name="password" id="password" placeholder="Password" required>
+
+		
+		
+		<input type="checkbox" id="tos" required>
+	    <label for="tos" >I agree to the TOS</label>
+		
+		<button type="submit">submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
